reorganized and added some content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,11 @@
 - name: Home
   link: /
 
-- name: Category Theory
-  link: /category_theory.html
+- name: Publications
+  link: /publications.html
+
+- name: Presentations
+  link: /presentation.html
+
+- name: Miscellaneous
+  link: /misc.html
