--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
 - name: Research
   link: /publications.html
 
-- name: Presentations
-  link: /presentation.html
+- name: More Things
+  link: /other.html
 
 #- name: UMRS
 #  link: /umrs.html
