updated content. Made teaching page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@
 - name: Research
   link: /publications.html
 
+- name: Teaching and Mentoring
+  link: /teaching.html
+
 - name: More Things
   link: /other.html
 
